<?xml version="1.0"?>
<package format="2">
  <name>scfr_solver</name>
  <version>0.0.0</version>
  <description>The scfr_solver package</description>

  <maintainer email="hiraoka@jsk.imi.i.u-tokyo.ac.jp">Naoki-Hiraoka</maintainer>

  <license>BSD</license>

  <buildtool_depend>catkin</buildtool_depend>
  <depend>static_equilibuim_test</depend>

</package>
