<?xml version="1.0"?>
<package format="2">
  <name>static_equilibuim_test</name>
  <version>0.0.0</version>
  <description>The static_equilibuim_test package</description>

  <maintainer email="hiraoka@jsk.imi.i.u-tokyo.ac.jp">Naoki-Hiraoka</maintainer>

  <license>BSD</license>

  <buildtool_depend>catkin</buildtool_depend>

  <depend>clpeigen</depend>

</package>
