<?xml version="1.0"?>
<package format="2">
  <name>wrench_distribution_existence</name>
  <version>0.0.0</version>
  <description>The wrench_distribution_existence package</description>

  <maintainer email="hiraoka@jsk.imi.i.u-tokyo.ac.jp">Naoki-Hiraoka</maintainer>

  <license>BSD</license>

  <buildtool_depend>catkin</buildtool_depend>
  <depend>clpeigen</depend>

</package>
